Remove usages of Commons Lang 2
Migrate from deprecated/EOL Commons Lang 2 to native Java Platform